plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
	id 'com.diffplug.spotless' version '8.8.0'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}
loom {
	accessWidenerPath = file("src/main/resources/jjpizza.accesswidener")
}
repositories {
	maven { url = 'https://jitpack.io' }
	maven { url = 'https://maven.isxander.dev/releases' }
	maven { url = 'https://maven.terraformersmc.com/' }
	maven { url = 'https://masa.dy.fi/maven' }
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	compileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	compileOnly "com.github.sakura-ryoko:malilib:${project.malilib_version}"

	testImplementation platform('org.junit:junit-bom:5.9.1')
	testImplementation 'org.junit.jupiter:junit-jupiter'
}

spotless {
	java {
		target fileTree(rootDir) {
			include 'src/*/java/**/*.java'
		}
		toggleOffOn()
		googleJavaFormat('1.35.0')
		trimTrailingWhitespace()
		endWithNewline()
	}
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}
test {
	useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	archiveFileName = "${project.archives_base_name}-${project.version}-${project.minecraft_version}.jar"

	from("LICENSE") {
		rename { "${it}_${project.archives_base_name}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

